# ETH-Zurich-ROS-Exercise-rospy-

Exercise 1/: husky.launch
Exercise 2/husky_highlevel_controller/: CMakeLists.txt  package.xml
Exercise 2/husky_highlevel_controller/config/: config.yaml
Exercise 2/husky_highlevel_controller/launch/: husky_highlevel_controller.launch
Exercise 2/husky_highlevel_controller/src/: listener.py
