<?xml version="1.0"?>
<package format="2">
  <name>husky_highlevel_controller</name>
  <version>0.1.0</version>
  <description>The husky_highlevel_controller package</description>
  <maintainer email="imatif17@gmail.com">Atif Belal</maintainer>
  <license>BSD</license>
  <author email="imatif17@gmail.com">Atif Belal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
</package>
